--- a/squirrel.custom.yaml
+++ b/squirrel.custom.yaml
@@ -162,7 +162,7 @@ patch:
       candidate_text_color: 0x555555
       comment_text_color: 0x999999
       corner_radius: 2
-      font_face: "HYQiHei-55S Book,HanaMinA Regular"
+      font_face: "PingFangSC-Regular"
       font_point: 14
       hilited_candidate_back_color: 0xfff0e4
       hilited_candidate_label_color: 0x555555
